--- a/WebApp/Pages/Index.cshtml
+++ b/WebApp/Pages/Index.cshtml
@@ -5,5 +5,5 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome Nikita </h1>
+    <h1 class="display-4">Welcome Nikita to this sample page.</h1>
 </div>
